# PEO

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
config/: config.yaml  config_override.yaml
examples/: generate_dummy_data.py  run_examples.ps1  run_examples.sh
examples/active_learning_small/: README.md  active_learning_update_template.csv  example_config_doe_nn_active_learning_small.yaml  sample_data_tiny.csv
examples/closed_loop/: README.md  example_config.yaml  example_config_doe_nn_active_learning.yaml  simulate_lab_deposition.py
examples/cvd/: example_config.yaml  example_config_robust_inverse.yaml  example_config_rsm.yaml  sample_data.csv
examples/deposition/: example_config.yaml  example_config_doe_nn.yaml  example_config_multi_target.yaml  example_config_robust_inverse.yaml  example_config_rsm.yaml  sample_data.csv  sample_data_small.csv
examples/etch/: example_config.yaml  example_config_robust_inverse.yaml  example_config_rsm.yaml  sample_data.csv
examples/mobo/: README.md  dummy_samples.csv  example_config_thickness_vs_resistance.yaml  example_config_transmittance_threshold.yaml  new_measurements_iter1.csv  sample_data_mobo.csv
src/process_optimizer/: __init__.py  cli.py  config.py  data_loader.py  feature_engineering.py  inverse_design.py  logging_utils.py  pipeline.py
src/process_optimizer/api/: query_handler.py
src/process_optimizer/doe/: __init__.py  analyzer.py  designs.py
src/process_optimizer/mobo/: __init__.py  (+1 more)
tests/: test_smoke_cli.py  test_vector_store.py
(+13 files in other folders)
